# AgentGuard

./: .env.dev  .env.example  .env.production  .gitignore  Dockerfile  README.md  TAXONOMY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml  update-homebrew.yml
Formula/: agentguard.rb
agentguard/: __init__.py  cli.py
agentguard/adapters/: base.py  langgraph_adapter.py  openai_adapter.py  openclaw.py
agentguard/analyzer/: __init__.py  intent_analyzer.py  local_classifier.py  prompts.py
agentguard/analyzer/backends/: __init__.py  anthropic_backend.py  base.py  openai_compat.py
agentguard/auth/: jwt_utils.py  rate_limiter.py
agentguard/core/: __init__.py  errors.py  exceptions.py  models.py  secure_agent.py
agentguard/guardrail/: __init__.py  db.py  guardrail.py  models.py
agentguard/integrations/: enrichment.py  enrichment_worker.py  insights.py  rowboat.py  rowboat_worker.py  stream.py
agentguard/interceptor/: __init__.py  action_types.py  interceptor.py
agentguard/ledger/: __init__.py  db.py  event_ledger.py
agentguard/policies/: default.yaml  strict.yaml
agentguard/policy/: __init__.py  _native.py  engine.py  schema.py
agentguard/proxy/: dependencies.py  middleware.py  models.py  pipeline.py  router_anthropic.py  router_openai.py
agentguard/taxonomy/: __init__.py  atlas.py  mappings.py  owasp.py
agentguard/telemetry/: __init__.py  logger.py
agentguard/templates/: env.example
agentguard_rs/: Cargo.toml  README.md  pyproject.toml
agentguard_rs/src/: lib.rs
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_agent_identity.py  0003_taxonomy_columns.py
api/: __init__.py  dependencies.py  main.py
api/middleware/: request_id.py
api/routes/: agents.py  auth.py  demo.py  events.py  health.py  insights.py  intercept.py  policies.py
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/app/agents/: page.tsx
dashboard/app/agents/[id]/: page.tsx
dashboard/app/dashboard/: page.tsx
dashboard/app/events/: page.tsx
dashboard/app/events/[id]/: page.tsx
dashboard/app/policies/: page.tsx
dashboard/app/timeline/: page.tsx
dashboard/components/agents/: AgentCard.tsx  KnowledgeGraph.tsx  RiskTrendSparkline.tsx
dashboard/components/dashboard/: RecentBlockedFeed.tsx  RiskSparklineChart.tsx  StatCards.tsx
dashboard/components/events/: EventTable.tsx  ProvenancePanel.tsx  ThreatTaxonomyPanel.tsx
dashboard/components/layout/: SidebarNav.tsx
dashboard/components/timeline/: SessionSelector.tsx  TimelineView.tsx
dashboard/lib/: api.ts  utils.ts
dashboard/types/: index.ts
examples/: demo_attack.py  langgraph_agent_example.py  openai_agent_example.py  openclaw_agent_example.py  openclaw_skill.ts  real_agent_demo.py
policies/: default.yaml  strict.yaml
tests/: conftest.py  test_abac.py  test_adapters.py  test_api.py  test_auth.py  test_eval.py  test_event_ledger.py  test_guardrail.py  test_guardrail_db.py  test_intent_analyzer.py  test_interceptor.py  test_ledger_sqlite.py  test_openai_compat_backend.py  test_openclaw_scenarios.py  test_policy_engine.py  test_provenance.py  test_proxy_pipeline.py  test_taxonomy.py
