[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentguard"
version = "0.9.0"
description = "Runtime detection and response for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Aneesh Arunjunai Saravanan" }]
keywords = ["ai", "agents", "security", "runtime", "llm", "detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "pyyaml>=6.0.2",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "redis>=5.0.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
openai    = ["openai>=1.55.0"]
langgraph = ["langgraph>=0.2.50", "langchain-core>=0.3.25"]
all       = ["agentguard[openai,langgraph]"]
dev       = [
    "agentguard[all]",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "maturin>=1.5",
]

[project.urls]
Homepage   = "https://github.com/An33shh/AgentGuard"
Repository = "https://github.com/An33shh/AgentGuard"
Issues     = "https://github.com/An33shh/AgentGuard/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentguard"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".env*",
    "venv/",
    "tests/",
    "examples/",
    "api/",
    "dashboard/",
    "policies/",
    "tasks/",
    "agentguard_rs/target/",
    "*.db",
    "*.db-shm",
    "*.db-wal",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["agentguard", "api"]
omit   = ["tests/*", "examples/*"]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before framework imports to populate env vars in time
"api/main.py"             = ["E402"]
# Conditional SQLAlchemy dialect imports require deferred module-level imports
"agentguard/ledger/db.py" = ["E402"]
