[package]
name = "agentguard_rs"
version = "0.1.0"
edition = "2021"
description = "Native Rust extension for AgentGuard policy pattern matching"
license = "MIT"

# See: https://pyo3.rs/v0.21.0/building-and-distribution.html
[lib]
name = "agentguard_rs"
crate-type = ["cdylib"]

[dependencies]
# PyO3: Python bindings. Extension-module feature avoids linking libpython at compile time.
pyo3 = { version = "0.28", features = ["extension-module"] }
# regex: DFA-based, guaranteed linear-time matching — no catastrophic backtracking.
regex = "1.10"
# dirs: cross-platform home directory resolution (mirrors Python's os.path.expanduser).
dirs = "5"

[profile.release]
# Maximum optimization for the hot-path matcher.
opt-level = 3
lto = true
codegen-units = 1
strip = true
